# OriginPalia

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  README.md
.github/: CONTRIBUTING.md
ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_magma.cpp  imgui_magma.h  imgui_spectrum.cpp  imgui_spectrum.h
ImGui/fonts/: fonts.h
ImGui/impls/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
ImGui/impls/windows/: imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_impl_win32.h
OHook/: ActorHandler.cpp  ActorHandler.h  ConfigHandler.cpp  ConfigHandler.h  Configuration.cpp  Configuration.h  DetourManager.cpp  DetourManager.h  HotkeyManager.cpp  HotkeyManager.h  ImGuiExt.cpp  ImGuiExt.h  PaliaOverlay.cpp  PaliaOverlay.h  SDKExt.h  Utils.h  dllmain.cpp
OHook/Core/: Configuration.cpp  Configuration.h  DetourManager.cpp  DetourManager.h  HotkeysManager.cpp  HotkeysManager.h  Main.cpp  Main.h
OHook/Core/Handlers/: ActorHandler.cpp  ActorHandler.h  ToolHandler.cpp  ToolHandler.h  WidgetHandler.cpp  WidgetHandler.h
OHook/Detours/: AimDetours.cpp  AimDetours.h  BlackMarketDetours.cpp  BlackMarketDetours.h  CookingDetours.cpp  CookingDetours.h  FishingDetours.cpp  FishingDetours.h  HUDDetours.cpp  HUDDetours.h  HousingDetours.cpp  HousingDetours.h  MovementDetours.cpp  MovementDetours.h  PlayerTweaksDetours.cpp  PlayerTweaksDetours.h  TeleportDetours.cpp  TeleportDetours.h  WidgetDetours.cpp  WidgetDetours.h
OHook/Detours/Main/: AimDetours.cpp  AimDetours.h  BlackMarketDetours.cpp  BlackMarketDetours.h  CookingDetours.cpp  CookingDetours.h  FishingDetours.cpp  FishingDetours.h  HUDDetours.cpp  HUDDetours.h  HousingDetours.cpp  HousingDetours.h  MovementDetours.cpp  MovementDetours.h  PlayerTweaksDetours.cpp  PlayerTweaksDetours.h  StoreDetours.cpp  StoreDetours.h  TeleportDetours.cpp  TeleportDetours.h  ToolBrickerDetours.cpp  ToolBrickerDetours.h  VillagerDetours.cpp  VillagerDetours.h  WidgetDetours.cpp  WidgetDetours.h
OHook/Misc/: ImGuiExt.cpp  ImGuiExt.h  ImGuiNotify.hpp  SDKExt.h  Utils.h  commented-out.txt
OHook/Overlay/: PaliaOverlay.cpp  PaliaOverlay.h
OHook/Overlay/Modules/: ESP_AnimalSettings.h  ESP_BugSettings.h  ESP_ForageableSettings.h  ESP_OreSettings.h  ESP_SingleSettings.h  ESP_TreeSettings.h  Store_AutoSellSettings.h
PaliaHook/: PaliaOverlay.cpp  PaliaOverlay.h  SDKExt.h  Utils.h  config.h  dllmain.cpp
PaliaSDK/: README.md  README.txt  UnrealContainers.cpp
RendererHook/: .clang-format  BaseHook.cpp  BaseHook.h  HookManager.cpp  HookManager.h  Macros.h  OverlayBase.cpp  OverlayBase.h  RendererDetector.cpp  RendererDetector.h  packages.config
RendererHook/Windows/: DX10Hook.cpp  DX10Hook.h  DX11Hook.cpp  DX11Hook.h  DX12Hook.cpp  DX12Hook.h  DX9Hook.cpp  DX9Hook.h  DX_VTables.h  OpenGLHook.cpp  OpenGLHook.h  WindowsHook.cpp  WindowsHook.h
UniversalHookX/: backend.hpp  math.cpp  math.hpp
UniversalHookX/console/: console.cpp  console.hpp
UniversalHookX/hooks/: hooks.cpp  hooks.hpp
UniversalHookX/hooks/backend/dx11/: hook_directx11.cpp  hook_directx11.hpp
UniversalHookX/hooks/backend/dx12/: hook_directx12.cpp  hook_directx12.hpp
UniversalHookX/hooks/input/: hook_dinput8.cpp  hook_dinput8.hpp  hook_mouse.cpp  hook_mouse.hpp
UniversalHookX/menu/: menu.cpp  menu.hpp  overlay.cpp  overlay.hpp  overlay_pub.h
UniversalHookX/utils/: utils.cpp  utils.hpp
